[package]
name = "ept-rearend-v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sha256 = "1.0.3"
toml = "0.5.9"
regex = "1.6.0"
lazy_static = "1.4.0"
bincode = "1.3.3"
casual_logger = "0.6.5"