[package]
name = "edgeless-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sha256 = "1.0.3"
dashmap = { version = "5.4.0", features = ["serde", "rayon"] }
blake3 = { version = "1.3.1", features = ["rayon"] }
toml = "0.5.9"
regex = "1.6.0"
lazy_static = "1.4.0"
bincode = "1.3.3"
casual_logger = "0.6.5"
cached = "0.38.0"
anyhow = "1"
memmap2 = "0.5.7"
rayon = "1.5.3"